--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>art stamps</title>
 </head>
 <body>
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.5.4/pixi.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.5.4/pixi.min.js'></script>
   <!-- <script  src="js/index.js"></script> -->
   <script src="js/click.js"></script>
 </body>
