--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>art stamps</title>
 </head>
 <body>
+  <!-- <button onclick="showDot()">Show Dot</button> -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.5.4/pixi.min.js'></script>
   <!-- <script  src="js/index.js"></script> -->
   <script src="js/click.js"></script>
