完成出多個題目

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           錯！！朕不是要蓋這裡！！
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">奴才斗膽再挑一次</button>
+          <button type="button"onclick="execCount()" class="btn btn-secondary" data-dismiss="modal">奴才斗膽再挑一次</button>
           <button type="button" onclick="hideCanvas()" class="btn btn-primary">皇上息怒，奴才先告退</button>
         </div>
       </div>
