--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <title>art stamps</title>
+  <title>蓋章攻略</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
 
@@ -29,9 +29,6 @@
       </div>
     </div>
   </div>
-  <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#errorDialog">
-      Launch demo modal
-    </button> -->
 
   <!-- Modal -->
   <div class="modal fade" id="errorDialog" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle">
@@ -54,8 +51,77 @@
     </div>
   </div>
 
-  <section id="final" class="final">
-    <img src="assets/2.jpg">
+  <section id="final" class="final container">
+      <div class="row">
+        <div class="col-8">
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" 
+                  src="" 
+                  alt="First slide"
+                  id="first-side"
+                >
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" 
+                  src="" 
+                  alt="Second slide"
+                  id="second-side"
+                >
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" 
+                  src="" 
+                  alt="Third slide"
+                  id="third-side"
+                >
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
+        <div class="col-4">
+          <ul>
+            <li>
+                <label>品名：</label><span id="articleSubject"></span>
+              </li>
+              <li>
+                <label>作者：</label><span id="articleMaker"></span>
+              </li>
+              <li>
+                <label>藏品類型：</label><span id="cateGory"></span>
+              </li>
+              <li>
+                <label>作品規格：</label><span id="articleRemarks"></span>
+              </li>
+              <li>
+                <label>作品敘述：</label>
+                <span style="white-space:pre-line" id="description"></span>
+              </li>
+              <li>
+                <label>創作媒材：</label><span id="media"></span>
+              </li>
+              <li>
+                <label>創作時間：</label><span id="slogan"></span>
+              </li>
+          </ul>
+        </div>
+
+      </div>
+
     <div>
       <button class="btn btn-secondary" onclick="showCanvas()">挑戰下一幅畫作</button>
       <button class="btn btn-secondary">公諸於世</button>
@@ -110,7 +176,6 @@
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
     crossorigin="anonymous"></script>
-  <!-- <button onclick="showDot()">Show Dot</button> -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.5.4/pixi.min.js'></script>
   <!-- <script  src="js/index.js"></script> -->
   <script src="js/click.js"></script>
