--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>蓋章攻略</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
+  <meta property="og:url"   content="https://buddalee.github.io/art-stamp/" />
+  <meta property="og:type"  content="website" />
+  <meta property="og:title" content="蓋章攻略" />
   <meta property="og:description" content="我在蓋章攻略挑戰《鵲華秋色圖》成功" />
   <meta property="og:image"  content="http://painting.npm.gov.tw/getCollectionImage.aspx?ImageId=563659&r=76444636820" />
 </head>
