--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
             <div class="carousel-item active">
               <img class="d-block w-100" src="" alt="First slide" id="first-side">
             </div>
-            <div class="carousel-item">
+            <!-- <div class="carousel-item">
               <img class="d-block w-100" src="" alt="Second slide" id="second-side">
             </div>
             <div class="carousel-item">
               <img class="d-block w-100" src="" alt="Third slide" id="third-side">
-            </div>
+            </div> -->
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
